<resources>
    <string name="app_name">TiviClon</string>
    <string name="user_string">Usuario</string>
    <string name="password_string">Contraseña</string>
    <string name="tv_login">Log In</string>
    <string name="valid_user_msg">Usuario válido, Navegando…</string>
    <string name="invalid_user_msg">El usuario no es válido, comprueba tus credenciales e intentalo de nuevo</string>
    <string name="tv_register">Registro</string>
    <string name="repeat_password_string">Repetir contraseña</string>
    <string name="confirm_registry">Confirmar Registro</string>
    <string name="visit_website">Visitar Web</string>
    <string name="navigate_button_str">haz click en el botón para navegar</string>
    <string name="navigate_bt">navegar</string>
    <string name="all_permissions_denied">LOCERR: all permissions denied</string>
    <string name="any_permissions_denied">LOCERR: any permissions denied</string>
    <string name="all_permissions_granted">all permissions granted</string>
    <string name="additional_listener_msg">Revisa los permisos en los ajustes</string>
    <string name="discover">Descubre</string>
    <string name="my_account">Mi Cuenta</string>
    <string name="login_alert_subtitle"></string>
    <string name="dialog_login">Entrar</string>
    <string name="dialog_neutral">Registrarse</string>
    <string name="dialog_disconect">Desconectar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="register_ok">registrado con éxito</string>
    <string name="login_fail">fallo en login</string>
    <string name="login_success">\"logeado con exito: \"</string>
    <string name="title_activity_detail_show">DetailShowActivity</string>
    <string name="tv_populars">polulares</string>
    <string name="tv_location">"basado en tu localización: "</string>
    <string name="gps_error">couldn\'t access gps</string>
    <string name="logging_library">haz login para ver tu biblioteca</string>
    <string name="fill_next_session">rellenar en la siguiente sesión</string>
    <string name="show_cover">show cover</string>
    <string name="related_string">Te puede interesar</string>
    <string name="about">Descripción</string>
    <string name="title">Titulo: </string>
    <string name="release_year">Fecha de salida:</string>
    <string name="genres">Categorías:</string>
    <string name="user_not_found">El usuario no existe</string>
    <string name="bd_fail">fallo en la base de datos</string>
</resources>