<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_library"
        android:enabled="true"
        android:icon="@drawable/local_library"
        android:title="Biblioteca"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_discover"
        android:enabled="true"
        android:icon="@drawable/weekend"
        app:showAsAction="collapseActionView"
        android:title="Descubre" />

    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/search"
        android:title="Buscar"
        app:showAsAction="ifRoom" />
</menu>